# tikv-client-c

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: HunterGate.cmake  config.cmake  find_grpc.cmake  find_poco.cmake  tikvclientc-config.cmake.in
cmake/Modules/: FindgRPC.cmake
include/pingcap/kv/: 2pc.h  BCOS2PC.h  LockResolver.h  RegionClient.h  Rpc.h  Scanner.h  Snapshot.h  Txn.h
include/pingcap/kv/internal/: type_traits.h
src/: CMakeLists.txt
src/kv/: 2pc.cc  BCOS2PC.cc  BCOS2pc.cc  LockResolver.cc  RegionCache.cc  Scanner.cc  Snapshot.cc
src/pd/: Client.cc
src/test/: CMakeLists.txt
src/test/real_tikv_test/: CMakeLists.txt  bcos_2pc_test.cc
